2009-09-22  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbglib_maincontext.c: fix multi thread blocking with Ruby
	1.8.6-p368 or later and 1.8.7-p173 or later. [#2862022]
	Reported by Andrea Dallera. Thanks!!!

	* src/lib/mkmf-gnome2.rb: don't add nonexistent path to include paths.

2009-08-15  Kouhei Sutou  <kou@cozmixng.org>

	* src/lib/mkmf-gnome2.rb: check $(vendorarchdir) availability.
	Reported by Toshiyuki Suzumura. Thanks!!!

2009-08-10  Kouhei Sutou  <kou@cozmixng.org>

	* extconf.rb, src/lib/mkmf-gnome2.rb: cleanup.

	* src/lib/mkmf-gnome2.rb: cleanup.

2009-07-26  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbglib.h (RBGLIB_MICRO_VERSION): 0.19.1 -> 0.19.2.

2009-05-31  Kouhei Sutou  <kou@cozmixng.org>

	* src/lib/mkmf-gnome2.rb: add also "-I$(vendorarchdir)" to CPPFLAGS.

	* src/depend: use RUBYARCHDIR.
	Patch by OBATA Akio. Thanks!!!

2009-05-30  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgobj_type.c: use GHashTable instead of Ruby's Hash to
	avoid object creation while GC.
	Reported by OBATA Akio. Thanks!!!

	* src/rbgobj_boxed.c (boxed_free): don't create new object on free.

	* src/rbglib.h (RBGLIB_MICRO_VERSION): 0.19.0 -> 0.19.1.

2009-05-27  Pascal Terjan  <pterjan@linuxfr.org>

	* src/rbglib.c: fix limits of basic types

2009-04-04  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbglib.h, src/rbglib_error.c (rbgerr_define_gerror): add
	const.
	Suggested by Nikolai Weibull. Thanks!!!

2009-03-27  Kouhei Sutou  <kou@cozmixng.org>

	* src/lib/pkg-config.rb: use license statement in www.gnu.org.
	Suggested by Samuel Tesla. Thanks!!!

2009-03-21  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbglib_maincontext.c, test/test_timeout.rb: fix inverted
	type conversion.
	Reported by Nikolai Weibull. Thanks!!!

2009-02-23  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbglib_convert.c: remove duplicated GLib.charset method.

	* src/rbgobj_object.c (Init_gobject_gobject): undef automatically
	notify method defined for GObject::notify signal.
